# LightingSystem

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: DimmingEngine.h  LightSchedule.h  LightingStrategy.h
include/helper/: DateTime.h
src/: DimmingEngine.cpp  LightSchedule.cpp  LightingStrategy.cpp  Main.cpp
src/helper/: DateTime.cpp
tests/: TestSchedule.cpp
